--- a/films_library/templates/includes/footer.html
+++ b/films_library/templates/includes/footer.html
@@ -1,3 +1,3 @@
 {% load static %}
-<p>© {% now "Y" %} Copyright <span style="color:#6b705c">TheBook</span></p>     
+<p>© {% now "Y" %} Copyright FilmLibrary <span style="color:#6b705c"></span></p>     
  
