--- a/films_library/templates/includes/header.html
+++ b/films_library/templates/includes/header.html
@@ -1,8 +1,8 @@
 {% load static %}
-<nav class="navbar navbar-light" style="background-color: #fae1dd">
+<nav class="navbar navbar-light" style="background-color: lightskyblue">
 <div class="container">
     <a class="navbar-brand" href="{% url 'films:index' %}">    
-    <span style="color:#6b705c">TheBook</span>
+    <span style="color:red">FilmLibrary</span>
     </a>
 </div>
 {% with request.resolver_match.view_name as view_name %}      
@@ -12,15 +12,15 @@
         {% if request.user.is_authenticated %}
         
         <li class="nav-item" > 
-          <a class="nav-link" style="color:#4a7c59" href="{% url 'films:comment_create' %}">New comment</a>
+          <a class="nav-link"  href="{% url 'films:review_create' %}">New review</a>
         </li>
 
         <li class="nav-item"> 
-          <a class="nav-link" style="color:#4a7c59" href="{% url 'films:film_create' %}">New film</a>
+          <a class="nav-link"  href="{% url 'films:film_create' %}">New film</a>
         </li>
 
         <li class="nav-item"> 
-          <a class="nav-link" style="color:#4a7c59" href="{% url 'films:films' %}">All films</a>
+          <a class="nav-link"  href="{% url 'films:films' %}">All films</a>
         </li>
         
         <li class="nav-item"> 
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" style="color:#4a7c59" href="{% url 'films:profile'  user.username %}">User: {{ user.username }}</a>
+          <a class="nav-link"  href="{% url 'films:profile'  user.username %}">User: {{ user.username }}</a>
         </li>
         {% else %}
         <li class="nav-item"> 
