--- a/films_library/templates/base.html
+++ b/films_library/templates/base.html
@@ -5,7 +5,7 @@
     {% include 'includes/head.html' %}
     <title>{% block title %}Title{% endblock %}</title>
   </head>
-  <body style="background-color: #f8edeb">       
+  <body >       
     <header>
       {% include 'includes/header.html' %}
     </header>
