--- a/films_library/templates/films/review_create.html
+++ b/films_library/templates/films/review_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-{% if is_edit %} Correct the commnet {% else %} New comment  {% endif %}
+{% if is_edit %} Correct the review {% else %} New review  {% endif %}
 {% endblock %}
 {% block content %}
 {% load user_filters %}
@@ -10,7 +10,7 @@
       <div class="col-md-8 p-5">
         <div class="card" style="background-color: #e8e8e4">
           <div class="card-header">       
-            {% if is_edit %} Correct the commnet {% else %} New comment   {% endif %}            
+            {% if is_edit %} Correct the review {% else %} New review   {% endif %}            
           </div>
           <div class="card-body">        
             <form method="post" action="">
