--- a/films_library/templates/films/review_detail.html
+++ b/films_library/templates/films/review_detail.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{{comment|truncatechars:30 }}{% endblock %}
+{% block title %}{{review|truncatechars:30 }}{% endblock %}
 {% block content %}
 <div class="row">
     <aside class="col-12 col-md-3">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          Publication date: {{ comment.pub_date|date:"d E Y" }} 
+          Publication date: {{ review.pub_date|date:"d E Y" }} 
         </li>           
         
         </li>
         <li class="list-group-item">
-          Author: <a href="{% url 'films:profile' comment.author.username %}">
-            {{ comment.author.get_username }}
+          Author: <a href="{% url 'films:profile' review.author.username %}">
+            {{ review.author.get_username }}
           </a>
         </li>
         
@@ -20,7 +20,7 @@
       </ul>
     </aside>
     <article class="col-12 col-md-9">
-        {{ comment.text }}
+        {{ review.text }}
     </article>
   </div> 
 
