--- a/films_library/templates/includes/head.html
+++ b/films_library/templates/includes/head.html
@@ -2,5 +2,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="msapplication-TileColor" content="#000">
+<meta name="msapplication-TileColor" content="#000">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
