--- a/films_library/templates/films/film_create.html
+++ b/films_library/templates/films/film_create.html
@@ -13,7 +13,7 @@
             {% if is_edit %} Correct the film {% else %} New film {% endif %}            
           </div>
           <div class="card-body">        
-            <form method="post" action="">
+            <form method="post" action="" enctype="multipart/form-data">
               {% csrf_token %}
               {% for field in form %}
               <div class="form-group row my-3 p-3" 
